file(GLOB asi_imager_SRCS *.cpp)
set(ASI_SDK_MAJOR 0)
set(ASI_SDK_MINOR 6)
set(ASI_SDK_PATCH 0214)
set(ASI_SDK_VERSION ${ASI_SDK_MAJOR}.${ASI_SDK_MINOR}.${ASI_SDK_PATCH})
set(ASI_SDK_DIR ${CMAKE_CURRENT_SOURCE_DIR}/ASI_SDK_v${ASI_SDK_VERSION}/)
if(ASI_SDK_VERSION VERSION_GREATER 0.4.0918)
  add_definitions(-DASI_CAMERA_REQUIRES_INIT)
endif(ASI_SDK_VERSION VERSION_GREATER 0.4.0918)
add_definitions(-DASI_SDK_VERSION="${ASI_SDK_VERSION}")
set(ASI_ARCH_x86_64 x64)
set(ASI_ARCH_i686 x86)
set(ASI_ARCH_armv7 armv7)
set(ASI_ARCH_armv6 armv6)

set(ASI_TARGET_ARCH ${ASI_ARCH_${PlanetaryImager_ARCH}})
if( "${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
    set(ASI_TARGET_ARCH "mac")
endif()

include_directories(${ASI_SDK_DIR}/include)
set(asi_driver_library ${ASI_SDK_DIR}/lib/${ASI_TARGET_ARCH}/libASICamera2.a)

if(NOT EXISTS ${asi_driver_library})
  message(STATUS "Downloading ASI SDK v${ASI_SDK_VERSION}")
  file(DOWNLOAD http://astronomy-imaging-camera.com/software/ASI_linux_mac_SDK_V${ASI_SDK_VERSION}.tar ${CMAKE_CURRENT_SOURCE_DIR}/asi_sdk.tar SHOW_PROGRESS)
  message(STATUS "ASI SDK downloaded, extracting")
  execute_process(COMMAND tar xf asi_sdk.tar WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
  execute_process(COMMAND rm asi_sdk.tar WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
  execute_process(COMMAND mkdir ASI_SDK_v${ASI_SDK_VERSION} WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
  execute_process(COMMAND tar xf ASI_linux_mac_SDK.tar.bz2 -C ASI_SDK_v${ASI_SDK_VERSION} WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
  execute_process(COMMAND rm ASI_linux_mac_SDK.tar.bz2 WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
endif()

add_driver(NAME zwo_asi_imager OS Linux Darwin DEFAULT_ON SRCS ${asi_imager_SRCS} LINK ${asi_driver_library} -lusb-1.0)

if(BUILD_DRIVER_zwo_asi_imager)
    install(FILES ${ASI_SDK_DIR}/lib/asi.rules DESTINATION ${UDEVRULES_INSTALL_DIR})
endif()
