add_library(output_writers STATIC filewriter.cpp)
add_imager_dependencies(output_writers)
add_library(ser_writer STATIC serwriter.cpp)
add_imager_dependencies(ser_writer)
add_library(image_file_writer STATIC imagefilewriter.cpp)
add_imager_dependencies(image_file_writer)
add_library(video_writer STATIC cvvideowriter.cpp)
add_definitions(-DHAVE_CV_VIDEO)
add_imager_dependencies(video_writer)
